tests/kyverno-policies/pvc-service-account/resources.yaml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-skip
  namespace: user-test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset2
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-namespace-fail
  namespace: webservice2
  annotations:
    osc.edu/fileset: user-test-fileset2
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail-no-sa
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-skip
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-fail
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset2
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail-no-fileset
  namespace: webservice
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pde-fileset
  namespace: webservice
  annotations:
    osc.edu/fileset: PDE0001
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pde-fileset-permission
  namespace: webservice
  annotations:
    osc.edu/fileset: PDE0001
    osc.edu/volume-permission: '0750'
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-skip-storageclass
  namespace: webservice
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: nfs
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-skip-storageclass
  namespace: paas
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: nfs
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass-storageclass
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/volume-permission: '0750'
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-fail-no-fileset
  namespace: paas
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass-storageclass
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/volume-permission: '0750'
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass-uid-gid
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: "1000"
    osc.edu/service-account-gid: "1001"
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-namespace-pass-uid-gid
  namespace: webservice2
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: "1000"
    osc.edu/service-account-gid: "1001"
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail-uid-gid-wrong
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: "2000"
    osc.edu/service-account-gid: "2001"
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail-uid-gid-missing
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-namespace-fail-uid-gid-missing
  namespace: webservice2
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail-service-account-missing
  namespace: webservice
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: "1000"
    osc.edu/service-account-gid: "1001"
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-ess
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass-uid-gid
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: "1000"
    osc.edu/service-account-gid: "1001"
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-fail-uid-gid-wrong
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
    osc.edu/service-account-uid: "2000"
    osc.edu/service-account-gid: "2001"
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-fail-uid-gid-missing
  namespace: paas
  annotations:
    osc.edu/fileset: user-test-fileset
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-scratch
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-fail-home
  namespace: paas
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-fail-home
  namespace: webservice
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass-home
  namespace: paas
  annotations:
    osc.edu/home: project/test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass-home
  namespace: webservice
  annotations:
    osc.edu/home: project/test
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-webservice-pass-home-invalid
  namespace: webservice
  annotations:
    osc.edu/home: project/foo
  labels:
    osc.edu/service-account: test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass-home
  namespace: paas
  annotations:
    osc.edu/home: project/test
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-paas-pass-home-invalid
  namespace: paas
  annotations:
    osc.edu/home: project/foo
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 8Gi
  storageClassName: local-home
