tests/kyverno-policies/pvc-service-account/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pvc-service-account
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pvc-service-account
    rule: validate-service-account
    resources:
      - pvc-webservice-skip-storageclass
      - pvc-webservice-skip
      - pvc-paas-skip
      - pvc-paas-pass
      - pvc-paas-fail
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: validate-service-account
    resources:
      - pvc-webservice-pass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-service-account
    resources:
      - pvc-webservice-fail-no-sa
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: validate-service-account-uid-gid-webservice
    resources:
      - pvc-webservice-skip-storageclass
      - pvc-webservice-fail-service-account-missing
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: validate-service-account-uid-gid-webservice
    resources:
      - pvc-webservice-pass-uid-gid
      - pvc-webservice-namespace-pass-uid-gid
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-service-account-uid-gid-webservice
    resources:
      - pvc-webservice-fail-uid-gid-wrong
      - pvc-webservice-fail-uid-gid-missing
      - pvc-webservice-namespace-fail-uid-gid-missing
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: validate-service-account-uid-gid-paas
    resources:
      - pvc-paas-skip-storageclass
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: validate-service-account-uid-gid-paas
    resources:
      - pvc-paas-pass-uid-gid
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-service-account-uid-gid-paas
    resources:
      - pvc-paas-fail-uid-gid-wrong
      - pvc-paas-fail-uid-gid-missing
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: pvc-validate-fileset-set
    resources:
      - pvc-webservice-fail-no-fileset
      - pvc-paas-fail-no-fileset
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: pvc-validate-fileset-set
    resources:
      - pvc-webservice-skip-storageclass
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: pvc-validate-fileset-set
    resources:
      - pvc-paas-pass-storageclass
      - pvc-webservice-pass-storageclass
      - pvc-webservice-pde-fileset
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: pvc-validate-home-set
    resources:
      - pvc-paas-fail-home
      - pvc-webservice-fail-home
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: pvc-validate-home-set
    resources:
      - pvc-webservice-skip-storageclass
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: pvc-validate-home-set
    resources:
      - pvc-paas-pass-home
      - pvc-webservice-pass-home
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: pvc-disallow-pde-fileset-permissions
    resources:
      - pvc-webservice-pde-fileset-permission
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: pvc-disallow-pde-fileset-permissions
    resources:
      - pvc-webservice-skip-storageclass
      - pvc-webservice-fail-no-fileset
      - pvc-paas-fail-no-fileset
      - pvc-paas-pass-storageclass
      - pvc-webservice-pass-storageclass
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: pvc-disallow-pde-fileset-permissions
    resources:
      - pvc-webservice-pde-fileset
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-webservice-fileset-annotation
    resources:
      - pvc-webservice-fail-no-sa
      - pvc-webservice-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: validate-webservice-fileset-annotation
    resources:
      - pvc-webservice-pass
      - pvc-webservice-namespace-pass-uid-gid
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-webservice-fileset-annotation
    resources:
      - pvc-webservice-fail
      - pvc-webservice-namespace-fail
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: validate-paas-fileset-annotation
    resources:
      - pvc-paas-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: validate-paas-fileset-annotation
    resources:
      - pvc-paas-pass
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-paas-fileset-annotation
    resources:
      - pvc-paas-fail
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: validate-webservice-home-annotation
    resources:
      - pvc-webservice-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: validate-webservice-home-annotation
    resources:
      - pvc-webservice-pass-home
      - pvc-webservice-namespace-pass-home
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-webservice-home-annotation
    resources:
      - pvc-webservice-pass-home-invalid
      - pvc-webservice-namespace-home-invalid
    kind: PersistentVolumeClaim
    result: fail
  - policy: pvc-service-account
    rule: validate-paas-home-annotation
    resources:
      - pvc-paas-skip
    kind: PersistentVolumeClaim
    result: skip
  - policy: pvc-service-account
    rule: validate-paas-home-annotation
    resources:
      - pvc-paas-pass-home
    kind: PersistentVolumeClaim
    result: pass
  - policy: pvc-service-account
    rule: validate-paas-home-annotation
    resources:
      - pvc-paas-pass-home-invalid
    kind: PersistentVolumeClaim
    result: fail
