tests/kyverno-policies/pvc-service-account/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: pvc-service-account
    rules:
      - name: validate-webservice-fileset-annotation
        values:
          userGroupMap.data.user-test: '["user-test-fileset"]'
      - name: validate-paas-fileset-annotation
        values:
          userGroupMap.data.user-test: '["user-test-fileset"]'
          userGroupMap.data.user-foo: '[]'
      - name: validate-service-account-uid-gid-webservice
        values:
          uidMap.data.user-test: "1000"
          gidMap.data.user-test: "1001"
      - name: validate-service-account-uid-gid-paas
        values:
          uidMap.data.user-test: "1000"
          gidMap.data.user-test: "1001"
      - name: validate-webservice-home-annotation
        values:
          homeMap.data.user-test: '/users/project/test'
      - name: validate-paas-home-annotation
        values:
          homeMap.data.user-test: '/users/project/test'
    resources:
      - name: pvc-webservice-skip
        values:
          namespaceServiceAccount: ''
      - name: pvc-webservice-pass
        values:
          namespaceServiceAccount: ''
      - name: pvc-webservice-fail-no-sa
        values:
          namespaceServiceAccount: ''
      - name: pvc-webservice-fail
        values:
          serviceAccount: test
      - name: pvc-webservice-namespace-fail
        values:
          namespaceServiceAccount: test
      - name: pvc-paas-skip
        values:
      - name: pvc-paas-pass
        values:
          serviceAccount: test
      - name: pvc-paas-fail
        values:
          serviceAccount: foo
      - name: pvc-webservice-pass-uid-gid
        values:
          serviceAccount: test
      - name: pvc-webservice-namespace-pass-uid-gid
        values:
          namespaceServiceAccount: test
      - name: pvc-webservice-fail-uid-gid-wrong
        values:
          serviceAccount: test
      - name: pvc-webservice-fail-uid-gid-missing
        values:
          serviceAccount: test
      - name: pvc-webservice-namespace-fail-uid-gid-missing
        values:
          namespaceServiceAccount: test
      - name: pvc-webservice-fail-service-account-missing
        values:
          namespaceServiceAccount: ''
      - name: pvc-paas-fail-service-account-missing
        values:
          serviceAccount: test
      - name: pvc-paas-fail-service-account-wrong
        values:
          serviceAccount: test
      - name: pvc-paas-pass-uid-gid
        values:
          serviceAccount: test
      - name: pvc-paas-fail-uid-gid-wrong
        values:
          serviceAccount: test
      - name: pvc-paas-fail-uid-gid-missing
        values:
          serviceAccount: test
      - name: pvc-webservice-pass-home
        values:
          serviceAccount: test
      - name: pvc-webservice-pass-home-invalid
        values:
          serviceAccount: test
      - name: pvc-paas-pass-home
        values:
          serviceAccount: test
      - name: pvc-paas-pass-home-invalid
        values:
          serviceAccount: test
namespaceSelector:
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: webservice2
    labels:
      osc.edu/role: webservice
      osc.edu/service-account: test
  - name: paas
    labels:
      osc.edu/role: paas
      osc.edu/service-account: test
  - name: user-test
    labels:
      account: test
